gen/1_programmability/2_non_incremental/f_cargo.txt
   Compiling pie v0.1.0 (/pie)
error[E0276]: impl has stricter requirements than trait
  --> src/context/non_incremental.rs:46:21
   |
46 |       fn execute<C: Context<ReturnHelloWorld>>(&self, context: &mut C) -> Self::Output {
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `C: Context<non_incremental::test::test_require_task_problematic::ReturnHelloWorld>`
   |
  ::: src/lib.rs:11:3
   |
11 |   fn execute<C: Context<Self>>(&self, context: &mut C) -> Self::Output;
   |   --------------------------------------------------------------------- definition of `execute` from trait

For more information about this error, try `rustc --explain E0276`.
error: could not compile `pie` (lib test) due to previous error
